Dodanie array_key_exists do sesji, aktualizacja changelog

--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,3 +1,7 @@
+[Master]
+[Message] Wdrorzenie Dframe\Session dodanie obsługi przekierowania Dframe\Router
+[Session] Dodanie metody array_key_exists
+
 v3.23.2
 [example] Aktualizacja
 [src] Optymalizacja kodu
