--- a/CHANGELOG
+++ b/CHANGELOG
@@ -1,6 +1,7 @@
 [Master]
 [Message] Wdrorzenie Dframe\Session dodanie obsługi przekierowania Dframe\Router
 [Session] Dodanie metody array_key_exists
+[src] Zamiana tabulatorów na spacje
 
 v3.23.2
 [example] Aktualizacja
